--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
-<h1>{{ page.title }}</h1>
+<div class="jumbotron">
+    <div class="container">
+        <h1>{{ page.title }}</h1>
+        <p>{{ page.date | date: "%-d %B %Y" }} by {% avatar {{page.author}} size=20 %} {{ page.author | default: site.author }}</p>
+    </div>
+</div>
 
-<p class="view">by {{ page.author | default: site.author }}</p>
+<div class="container">
+    {{ content }}
+</div>
 
-{{content}}
-
-{% if page.tags %}
-  <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
-{% endif %}
