--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="jumbotron">
     <div class="container">
         <h1>{{ page.title }}</h1>
-        <p>{{ page.date | date: "%-d %B %Y" }} by {% avatar {{page.author}} size=20 %} {{ page.author | default: site.author }}</p>
+        <p>{{ page.date | date: "%-d %B %Y" }} {% if page.author %}by {% avatar {{page.author}} size=20 %} {{ page.author | default: site.author }}{% endif %}</p>
     </div>
 </div>
 
