--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -30,3 +30,9 @@ footer {
     height: 100%;
     padding-right: 0.5rem;
 }
+
+.blog-post-meta {
+    border-left: 6px solid #333;
+    color: #333;
+    padding-left: 0.5rem;
+}
