--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -32,7 +32,8 @@ footer {
 }
 
 .blog-post-meta {
-    border-left: 6px solid #333;
-    color: #333;
-    padding-left: 0.5rem;
+    border-left: 3px solid #555;
+    color: #555;
+    padding: 0 0 0 1.5rem;
+    font-size: 0.9rem;
 }
