--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -23,11 +23,11 @@ footer {
 }
 
 .main-header {
-    min-height: 7rem;
+    min-height: 9rem;
 }
 
 .kappa-logo {
-    height: 100%;
+    height: 5rem;
     padding-right: 0.5rem;
 }
 
