--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="jumbotron">
     <div class="container">
-        <h1>{{ page.title }}</h1>
-        <p>{{ page.date | date: "%-d %B %Y" }} {% if page.author %}by {% avatar {{page.author}} size=20 %} {{ page.author | default: site.author }}{% endif %}</p>
+        <h1><span class="kappa">{{ page.title }}</span></h1>
+        <p class="blog-post-meta">{{ page.date | date: "%-d %B %Y" }} {% if page.author %}by {% avatar {{page.author}} size=20 %} {{ page.author | default: site.author }}{% endif %}</p>
     </div>
 </div>
 
