improve main page

--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -28,7 +28,7 @@ footer {
 
 .kappa-logo {
     height: 5rem;
-    padding-right: 0.5rem;
+    padding-right: 2rem;
 }
 
 .blog-post-meta {
@@ -36,4 +36,8 @@ footer {
     color: #555;
     padding: 0 0 0 0.4rem;
     font-size: 0.9rem;
+}
+
+.blog-post {
+    margin-bottom: 2rem;
 }
