--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -11,7 +11,7 @@ $kappa-gradient: linear-gradient(to right, red, orange , yellow, green, blue, vi
     }
 
     .navbar-text {
-        color: #ddd;
+        color: #eee;
     }
 }
 
