--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -50,6 +50,12 @@ footer {
     font-size: 0.9rem;
 }
 
+.blog-post-author {
+    font-weight: bold;
+    text-decoration: none;
+    color: #555;
+}
+
 .blog-post {
     margin-bottom: 2rem;
 }
