--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -1,6 +1,6 @@
 @import "highlight";
 
-$kappa-gradient: linear-gradient(to right, red, orange , yellow, green, blue, violet);
+$kappa-gradient: linear-gradient(to right, red, orange , eded00, green, blue, violet);
 
 
 .navbar-rb {
