--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <div class="container">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link disabled">&copy; Kappa 2018</a>
+                    <a class="nav-link disabled">&copy; Kappa 2018–2019</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://ctftime.org/team/1607" target="_blank">CTFTime</a>
