--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -63,3 +63,10 @@ a.blog-post-author :hover {
 .blog-post {
     margin-bottom: 2rem;
 }
+
+.container {
+    &>img {
+        text-align: center;
+        max-width: 60%;
+    }
+}
