--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -65,7 +65,7 @@ a.blog-post-author :hover {
 }
 
 .container {
-    &>img {
+    & img {
         text-align: center;
         max-width: 60%;
     }
