--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -66,7 +66,8 @@ a.blog-post-author :hover {
 
 .container {
     & img {
-        text-align: center;
+        display: block;
+        margin: auto;
         max-width: 60%;
     }
 }
