wrap in post container

--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -64,7 +64,7 @@ a.blog-post-author :hover {
     margin-bottom: 2rem;
 }
 
-.container {
+.post-content.container {
     & img {
         display: block;
         margin: auto;
