--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSpoiler">
             <span class="navbar-text mr-auto">
-                CTF Team from Saint Petersburg
+                CTF Team from <!-- Saint Petersburg --> Ufa
             </span>
             <ul class="navbar-nav">
                 <li class="nav-item">
