--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,6 @@
         </div>
     </footer>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script> -->
 </body>
 </html>
