Revert "move forward to Volga CTF"
This reverts commit bf2ea97300fb24ebf16cfb04d097bb1a2ab88db4.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSpoiler">
             <span class="navbar-text mr-auto">
-                CTF Team from <!-- Saint Petersburg --> Ufa
+                CTF Team from Saint Petersburg
             </span>
             <ul class="navbar-nav">
                 <li class="nav-item">
