--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Kappa Blog</title>
+    <title>Kappa CTF Team</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-rb bg-rb">
-        <a href="{{ "/" | absolute_url }}" class="navbar-brand">Kappa</a>
+    <nav class="navbar navbar-expand-md navbar-kappa">
+        <a href="{{ "/" | absolute_url }}" class="navbar-brand">Kappa CTF Team</a>
 
         <div class="collapse navbar-collapse" id="navbarSpoiler">
-            <span class="navbar-text mr-auto">
-                CTF Team from Saint Petersburg
-            </span>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://shop.kappactf.ru/">Мерч</a>
+                    <a class="nav-link" href="/about.html">О нас</a>
+                </li>
+                <li class="nav-item navbar-text">
+                    <strong>16+</strong>
                 </li>
             </ul>
         </div>
@@ -32,13 +32,15 @@
         <div class="container">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link disabled">&copy; Kappa 2018–2019</a>
+                    <a class="nav-link disabled">&copy; МРОО «АРСИБ», 2018–2019</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://t.me/kappakzf" target="_blank">Telegram</a>
                 <li class="nav-item">
                     <a class="nav-link" href="https://ctftime.org/team/1607" target="_blank">CTFTime</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="mailto:blog@kappactf.ru" target="_blank">E-mail</a>
+                    <a class="nav-link" href="mailto:press&#x40;kappactf.ru" target="_blank">E-mail</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://github.com/kappactf/" target="_blank">GitHub</a>
