fix header theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-kappa">
-        <a href="{{ "/" | absolute_url }}" class="navbar-brand">Kappa CTF Team</a>
+        <a href="{{ "/" | absolute_url }}" class="navbar-brand mr-auto">Kappa CTF Team</a>
 
         <div class="collapse navbar-collapse" id="navbarSpoiler">
             <ul class="navbar-nav">
