--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,16 +14,14 @@
     <nav class="navbar navbar-expand-md navbar-kappa">
         <a href="{{ "/" | absolute_url }}" class="navbar-brand mr-auto">Kappa CTF Team</a>
 
-        <div class="collapse navbar-collapse" id="navbarSpoiler">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/about.html">О нас</a>
-                </li>
-                <li class="nav-item navbar-text">
-                    <strong>16+</strong>
-                </li>
-            </ul>
-        </div>
+        <ul class="navbar-nav d-none d-md-block">
+            <li class="nav-item">
+                <a class="nav-link" href="/about.html">О нас</a>
+            </li>
+            <li class="nav-item navbar-text">
+                <strong>16+</strong>
+            </li>
+        </ul>
     </nav>
     
     {{ content }}
