set background for the whole menu

--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -4,8 +4,10 @@ $kappa-gradient: linear-gradient(to right, red, orange , #eded00, green, deepsky
 
 
 .navbar-kappa {
-    &>container {
-        background: #000 url("/assets/img/kappa.png");
+    background: #000;
+
+    &>.container {
+        background: url("/assets/img/kappa.png");
         background-repeat: no-repeat;
         background-size: auto 75%;
         background-position: 1rem center;
