--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
             <ul class="navbar-nav d-none d-md-flex">
                 <li class="nav-item mr-3">
-                    <a class="nav-link" href="/about.html">О нас</a>
+                    <a class="nav-link" href="/about/">О нас</a>
                 </li>
                 <li class="nav-item navbar-text">
                     <strong>16+</strong>
