move post-feed lower

--- a/_sass/kappa-theme.scss
+++ b/_sass/kappa-theme.scss
@@ -91,6 +91,10 @@ footer {
     }
 }
 
+.post-feed {
+    margin-top: 4rem;
+}
+
 .blog-post-meta {
     border-left: 3px solid #555;
     color: #555;
