add cybrics bets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <div class="container">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link disabled">&copy; МРОО «АРСИБ», 2018–2019</a>
+                    <a class="nav-link disabled">&copy; Kappa CTF Team, 2018–2019</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://t.me/kappakzf" target="_blank">Telegram</a>
