add volgactf qualifier page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
                     <a class="nav-link disabled">&copy; Kappa CTF Team, 2018–2019</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://t.me/kappakzf" target="_blank">Telegram</a>
+                    <a class="nav-link" href="https://t.me/kappactf" target="_blank">Telegram</a>
                 <li class="nav-item">
                     <a class="nav-link" href="https://ctftime.org/team/1607" target="_blank">CTFTime</a>
                 </li>
